--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "payload-starter-javascript",
-  "description": "Blank template - no collections",
+  "name": "payload-blog",
+  "description": "Blog template",
   "version": "1.0.0",
   "main": "server.js",
   "license": "MIT",
@@ -10,12 +10,19 @@
     "serve": "NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.9.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongodb-connection-model": "^21.19.1",
-    "payload": "^1.0.8"
+    "payload": "^0.19.2",
+    "qrcode": "^1.5.1",
+    "react-native-svg": "^12.4.0",
+    "react-qr-code": "^2.0.7",
+    "react-qr-image": "^1.1.0",
+    "react-qr-scanner": "^1.0.0-alpha.8"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.6"
   }
 }
